# blockregion

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: create-release.yml
code/: CMakeLists.txt
code/include/entity/: entity.cpp  entity.h  player.cpp  player.h
code/include/errors/: br-expected.h  codes.h  error.h
code/include/meshes/: chunk-mesh.h  text.h
code/include/renderer/: include.h  renderer.cpp  renderer.h  types.h  window.cpp  window.h  wrapper.h
code/include/shaders/: block.h  loader.h  shader.h  text.h
code/include/text/: text.h
code/include/textures/: error-texture.h  loader.h  texture.h
code/include/utils/: camera.h  collision-detection.cpp  get-folder.h
code/include/world/: area.h  block.h  chunk.h  types.h  world.cpp  world.h
code/include/world/generation/: chunk.h
code/shaders/: CMakeLists.txt  block.frag  lighting.frag
code/src/: block-consts.h  block.cpp  block.h  camera.h  chunk-consts.h  chunk-mesh.h  chunk.cpp  chunk.h  collision-detection.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  mesh.h  player.cpp  player.h  text.h  texture-loader.cpp  texture-loader.h  world.cpp  world.h
code/src/include/shaders/: block.h  loader.h  types.h
devops/cmake/: FindAsio.cmake  FindFreetype.cmake  FindGLEW.cmake  FindGlew.cmake  FindSOIL2.cmake  FindSpdlog.cmake  Findglfw3.cmake  Findglm.cmake  Findnlohmann_json.cmake
textures/: CMakeLists.txt  textures.json
